--- a/index.html
+++ b/index.html
@@ -1629,6 +1629,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Harold Hedd</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Herge</td>
 <td>2011</td>
 <td>Drawn &amp; Quarterly</td>
@@ -4374,6 +4381,13 @@
 </tr>
 
 <tr>
+<td>Armageddon</td>
+<td>1970</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Army Attack</td>
 <td>1964</td>
 <td>Charlton</td>
@@ -5599,6 +5613,13 @@
 </tr>
 
 <tr>
+<td>Barefoot Gen</td>
+<td>2004</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Barnaby</td>
 <td>2013</td>
 <td>Fantagraphics</td>
@@ -6715,6 +6736,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Binky Brown Meets The Holy Virgin Mary</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7939,6 +7967,13 @@
 <td>2014</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brain Fantasy</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9524,7 +9559,7 @@
 </tr>
 
 <tr>
-<td>Cherry</td>
+<td>Cherry Poptart</td>
 <td>1982</td>
 <td>Last Gasp</td>
 <td><a href="Cherry/Cherry.html">Details</a></td>
@@ -9737,6 +9772,13 @@
 <td>1998</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chocolate Alphabet</td>
+<td>1975</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13323,6 +13365,13 @@
 </tr>
 
 <tr>
+<td>Dirty Laundry</td>
+<td>1974</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dirty Pair</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -13834,6 +13883,13 @@
 </tr>
 
 <tr>
+<td>Dopin' Dan</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dora The Explorer</td>
 <td>2000</td>
 <td>Nickelodeon</td>
@@ -13901,6 +13957,13 @@
 <td>1989</td>
 <td>4 Winds</td>
 <td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Dr. Atomic</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16920,6 +16983,13 @@
 </tr>
 
 <tr>
+<td>Fresca Zizis</td>
+<td>1977</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Freshmen</td>
 <td>2005</td>
 <td>Image</td>
@@ -18649,6 +18719,13 @@
 </tr>
 
 <tr>
+<td>Grim Wit</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grimm's Ghost Stories</td>
 <td>1972</td>
 <td>Gold Key</td>
@@ -20140,6 +20217,13 @@
 </tr>
 
 <tr>
+<td>Horny Biker Slut</td>
+<td>1990</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Horror Book</td>
 <td>2008</td>
 <td>Image</td>
@@ -20431,6 +20515,13 @@
 <td>2016</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hup</td>
+<td>1986</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21250,6 +21341,13 @@
 <td>2002</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>It Ain't Me, Babe</td>
+<td>1970</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23150,6 +23248,13 @@
 </tr>
 
 <tr>
+<td>Last Gasp Comix &amp; Stories</td>
+<td>1994</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Man Standing: Killbook Of a Bounty Hunter</td>
 <td>2010</td>
 <td>Dark Horse</td>
@@ -23343,6 +23448,13 @@
 <td>1989</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legion Of Charlies</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25960,6 +26072,13 @@
 <td>1978</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mickey Rat</td>
+<td>1980</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30420,6 +30539,13 @@
 </tr>
 
 <tr>
+<td>Pure Trance</td>
+<td>2005</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>PvP</td>
 <td>2003</td>
 <td>Image</td>
@@ -33474,6 +33600,13 @@
 </tr>
 
 <tr>
+<td>Skull</td>
+<td>1970</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skull Island The Birth Of Kong</td>
 <td>2017</td>
 <td>Legendary</td>
@@ -33590,6 +33723,13 @@
 <td>2017</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slow Death</td>
+<td>1970</td>
+<td>Last Gasp</td>
+<td><a href="SlowDeath/SlowDeath.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35440,6 +35580,13 @@
 </tr>
 
 <tr>
+<td>Tales From The Leather Nun</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales From The Plague</td>
 <td>1986</td>
 <td>Eclipse</td>
@@ -36777,6 +36924,13 @@
 </tr>
 
 <tr>
+<td>Twisted Sisters</td>
+<td>1976</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Twisted Tales</td>
 <td>1982</td>
 <td>PC</td>
@@ -36805,6 +36959,13 @@
 </tr>
 
 <tr>
+<td>Two Gun Kid</td>
+<td>1948</td>
+<td>Marvel</td>
+<td><a href="TwoGunKid/TwoGunKid.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Two-Fisted Tales</td>
 <td>1950</td>
 <td>EC</td>
@@ -36812,10 +36973,10 @@
 </tr>
 
 <tr>
-<td>Two Gun Kid</td>
-<td>1948</td>
-<td>Marvel</td>
-<td><a href="TwoGunKid/TwoGunKid.html">Details</a></td>
+<td>Two-Fisted Zombies</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -38884,6 +39045,13 @@
 </tr>
 
 <tr>
+<td>Wimmen's Comix</td>
+<td>1981</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Winds Of Winter</td>
 <td>2001</td>
 <td>Antarctic Press</td>
@@ -39591,6 +39759,13 @@
 </tr>
 
 <tr>
+<td>Young Lust</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Young Ones</td>
 <td>1982</td>
 <td>BBC</td>
@@ -39665,6 +39840,13 @@
 <td>1968</td>
 <td>Apex Novelty</td>
 <td><a href="Zap/zap.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zap</td>
+<td>1982</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td> 
 </tr>
 
 <tr>
