--- a/slideshow.html
+++ b/slideshow.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <p>
-<h1>Cover Slideshow</h1>
+<h1>Slideshow</h1>
 A slideshow of all covers on it's own page as the site has 1000s of images so the load time is often slow. Someday I would like to make a slideshow with links so that you can go to the title page of interesting images to get details.
 </p><p>
 <div class="row"><div class="column">
@@ -20,21 +20,9 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="1stFolio/1stFolio.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1000Jokes/1000Jokes9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="1001ArabianNights/1001ArabianNights6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="100Bullets/100Bullets001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="100Bullets/100Bullets002.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="100Bullets/100Bullets003.jpg"></div>
