--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -46,6 +46,7 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp26.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp28.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -81,7 +82,8 @@ Comics:
 <li><a href="LastGasp21.jpg">Skull</a> (1970)
 <li><a href="../SlowDeath/SlowDeath.html">Slow Death</a> (1970)
 <li><a href="LastGasp22.jpg">Tales from the Leather Nun</a> (1973)
-<li><a href="LastGasp27.jpg">Twisted Sisters</a>(1976)
+<li><a href="LastGasp27.jpg">Twisted Sisters</a> (1976)
+<li><a href="LastGasp28.jpg">Two-Fisted Zombies</a> (1973)
 <li><a href="../Weirdo/Weirdo.html">Weirdo</a> (1981)
 <li><a href="LastGasp24.jpg">Wimmen's Comix</a> (1981)
 <li><a href="LastGasp25.jpg">Young Lust</a> (1972)
