--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -58,36 +58,90 @@ Last Gasp no longer publishes "floppy" comics; the company publishes art and pho
 </p><p>
 Comics:
 </p><p>
+<li><a href="LastGasp29.jpg">#@@*! Coloring Book</a> (2001)
 <li><a href="LastGasp3.jpg">Adventures of Harold Hedd</a> (1972)
+<li><a href="LastGasp30.jpg">Agape</a> (2002)
+<li><a href="LastGasp31.jpg">American Flyer</a> (1972)
+<li><a href="LastGasp32.jpg">Amputee Love</a> (1975)
 <li><a href="../Anarchy/Anarchy.html">Anarchy Comics</a> (1978)
+<li><a href="LastGasp33.jpg">Are Your Highs Getting You Down?</a> (1981)
 <li><a href="LastGasp5.jpg">Armageddon</a> (1970)
+<li><a href="LastGasp34.jpg">As-Fix-E-8</a> (1993)
+<li><a href="LastGasp35.jpg">Auto-be Recycled</a> (1980)
+<li><a href="LastGasp36.jpg">Bakersfield Kountry Comics</a> (1973)
 <li><a href="../BarefootGen/BarefootGen.html">Barefoot Gen</a> (2004)
+<li><a href="LastGasp37.jpg">Best Buy Comics</a> (1988)
 <li><a href="LastGasp6.jpg">Binky Brown Meets the Holy Virgin Mary</a> (1972)
+<li><a href="LastGasp38.jpg">Blood On The Moon</a> (1978)
+<li><a href="LastGasp81.jpg">Book Of Weirdo</a> (2019)
 <li><a href="LastGasp7.jpg">Brain Fantasy</a> (1972)
+<li><a href="LastGasp82.jpg">Bum Wad</a> (1971)
+<li><a href="LastGasp39.jpg">Cannibal Romances</a> (1986)
 <li><a href="../Cherry/Cherry.html">Cherry Poptart</a> (1982)
-<li><a href="LastGasp8.jpg">Harlan Ellison's Chocolate Alphabet</a> (1975)
+<li><a href="LastGasp8.jpg">Chocolate Alphabet</a> (1975)
+<li><a href="LastGasp79.jpg">Choke Gasp! Best 75 Years of EC Comics</a> (2019)
 <li><a href="../CocaineComix/CocaineComix.html">Cocaine Comix</a> (1975)
+<li><a href="LastGasp40.jpg">Commies From Mars</a> (1979)
 <li><a href="LastGasp9.jpg">Dirty Laundry</a> (1974)
 <li><a href="LastGasp11.jpg">Dopin' Dan</a> (1972)
+<li><a href="LastGasp41.jpg">Dori Stories</a> (1999)
 <li><a href="LastGasp12.jpg">Dr. Atomic</a> (1972)
+<li><a href="LastGasp42.jpg">E.Z. Wolf's Astral Outhouse</a> (1977)
+<li><a href="LastGasp43.jpg">Eternal Comics</a> (1973)
+<li><a href="LastGasp44.jpg">Extra Good Stuff</a> (2015)
+<li><a href="LastGasp45.jpg">Fantagor</a> (1971)
 <li><a href="LastGasp13.jpg">Fresca Zizis</a> (1977)
+<li><a href="LastGasp46.jpg">Go Naked</a> (1993)
+<li><a href="LastGasp47.jpg">Goodnight, Irene</a> (2007)
 <li><a href="LastGasp14.jpg">Grim Wit</a> (1973)
+<li><a href="LastGasp80.jpg">Heaven's Door</a> (2020)
 <li><a href="LastGasp16.jpg">Horny Biker Slut</a> (1990)
+<li><a href="LastGasp48.jpg">Hot Crackers</a> (1972)
 <li><a href="LastGasp17.jpg">Hup</a> (1986)
+<li><a href="LastGasp49.jpg">Image Of The Beast</a> (1973)
+<li><a href="LastGasp50.jpg">Inner city Romance</a> (1972)
 <li><a href="LastGasp18.jpg">It Ain't Me, Babe</a> (1970)
+<li><a href="LastGasp51.jpg">Its A Dog's Life</a> (1982)
+<li><a href="LastGasp52.jpg">Junkwaffle</a> (1983)
+<li><a href="LastGasp53.jpg">Justin Green's Binky Brown Sampler</a> (1995)
 <li><a href="LastGasp19.jpg">Last Gasp Comix &amp; Stories</a> (1994)
+<li><a href="LastGasp54.jpg">Laugh In The Dark</a> (1971)
 <li><a href="LastGasp4.jpg">Legion of Charlies</a> (1971)
+<li><a href="LastGasp55.jpg">Little Fluffy Gigolo Pelu</a> (2009)
+<li><a href="LastGasp56.jpg">Lonely Nights</a> (1986)
+<li><a href="LastGasp57.jpg">Merton Of The Movement</a> (1971)
+<li><a href="LastGasp58.jpg">Monolith</a> (1972)
+<li><a href="LastGasp59.jpg">Motor City Comics</a> (1991)
 <li><a href="LastGasp23.jpg">Mickey Rat</a> (1980)
+<li><a href="LastGasp60.jpg">Musical Legends</a> (2004)
+<li><a href="LastGasp61.jpg">My Troubles With Women</a> (1992)
+<li><a href="LastGasp62.jpg">Mystic Funnies</a> (1999)
+<li><a href="LastGasp63.jpg">No Ducks!</a> (1977)
+<li><a href="LastGasp64.jpg">Psychotic Adventures</a> (1973)
 <li><a href="LastGasp26.jpg">Pure Trance</a> (2005)
+<li><a href="LastGasp65.jpg">R. Crumb Draws The Blues</a> (1973)
+<li><a href="LastGasp66.jpg">Raw, Boiled and Cooked: Comics on the Verge</a> (2004)
+<li><a href="LastGasp67.jpg">Red Raider</a> (1977)
+<li><a href="LastGasp68.jpg">Sacred And Profane</a> (1976)
+<li><a href="LastGasp69.jpg">San Francisco Comic Book</a> (1981)
+<li><a href="LastGasp70.jpg">Schizophrenia</a> (1973)
 <li><a href="LastGasp21.jpg">Skull</a> (1970)
 <li><a href="../SlowDeath/SlowDeath.html">Slow Death</a> (1970)
+<li><a href="LastGasp71.jpg">Spasm</a> (1973)
+<li><a href="LastGasp78.jpg">Strange Tale Of Panorama Island</a> (2012)
 <li><a href="LastGasp22.jpg">Tales from the Leather Nun</a> (1973)
+<li><a href="LastGasp72.jpg">Tejano Exile</a> (1980)
+<li><a href="LastGasp73.jpg">Tokyo Zombie</a> (2008)
+<li><a href="LastGasp74.jpg">Tortoise And The Hare</a> (1971)
 <li><a href="LastGasp27.jpg">Twisted Sisters</a> (1976)
 <li><a href="LastGasp28.jpg">Two-Fisted Zombies</a> (1973)
 <li><a href="../Weirdo/Weirdo.html">Weirdo</a> (1981)
+<li><a href="LastGasp75.jpg">White Comanche</a> (1977)
 <li><a href="LastGasp24.jpg">Wimmen's Comix</a> (1981)
 <li><a href="LastGasp25.jpg">Young Lust</a> (1972)
+<li><a href="LastGasp76.jpg">Yow</a> (1978)
 <li><a href="../Zap/zap.html">Zap Comix</a> (1982)
+<li><a href="LastGasp77.jpg">Zippy</a> (1980)
 </p><p>
 Books:
 </p><p>
