--- a/index.html
+++ b/index.html
@@ -3485,6 +3485,13 @@
 </tr>
 
 <tr>
+<td>American Flyer</a>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Freak</td>
 <td>1994</td>
 <td>Vertigo</td>
@@ -3671,6 +3678,13 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amputee Love</a>
+<td>1975</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4325,6 +4339,13 @@
 </tr>
 
 <tr>
+<td>Are Your Highs Getting You Down?</a>
+<td>1981</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Area 10</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -4588,6 +4609,13 @@
 <td>2017</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>As-Fix-E-8</a>
+<td>1993</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5015,6 +5043,13 @@
 <td>1999</td>
 <td>DC</td>
 <td><a href="Authority/Authority.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Auto-be Recycled</a>
+<td>1980</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5456,6 +5491,13 @@
 <td>2006</td>
 <td>Dark Horse</td>
 <td><a href="BakersMeetJingleBelle/BakersMeetJingleBelle.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bakersfield Kountry Comics</a>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6323,6 +6365,13 @@
 <td>2006</td>
 <td>Houghton Mifflin</td>
 <td><a href="BestAmericanComics/BestAmericanComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Buy Comics</td>
+<td>1988</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7418,6 +7467,13 @@
 </tr>
 
 <tr>
+<td>Blood On The Moon</td>
+<td>1978</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blood Orange</td>
 <td>2004</td>
 <td>Fantagraphics</td>
@@ -7799,6 +7855,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="BookOfTheDead/BookOfTheDead.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Weirdo</td>
+<td>2019</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8383,6 +8446,13 @@
 </tr>
 
 <tr>
+<td>Bum Wad</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bummer</td>
 <td>1995</td>
 <td>Fantagraphics</td>
@@ -8674,6 +8744,13 @@
 <td>2016</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cannibal Romances</td>
+<td>1986</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9782,6 +9859,13 @@
 </tr>
 
 <tr>
+<td>Choke Gasp! Best 75 Years of EC Comics</td>
+<td>2019</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Choker</td>
 <td>2010</td>
 <td>Image</td>
@@ -10610,6 +10694,13 @@
 <td>1957</td>
 <td>Atlas</td>
 <td><a href="CommandoAdventures/CommandoAdventures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Commies From Mars</td>
+<td>1979</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13904,6 +13995,13 @@
 </tr>
 
 <tr>
+<td>Dori Stories</td>
+<td>1999</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dorothy Lamour</td>
 <td>1950</td>
 <td>Fox Comics</td>
@@ -14461,6 +14559,13 @@
 <td>1989</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>E.Z. Wolf's Astral Outhouse</td>
+<td>1977</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15269,6 +15374,13 @@
 </tr>
 
 <tr>
+<td>Eternal Comics</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eternal Descent</td>
 <td>2010</td>
 <td>IDW</td>
@@ -15512,7 +15624,14 @@
 <td>Vertigo</td>
 <td><a href="Exterminators/Exterminators.html">Details</a></td>
 </tr>
- 
+
+<tr>
+<td>Extra Good Stuff</td>
+<td>2015</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Extra!</td>
 <td>1955</td>
@@ -15763,6 +15882,13 @@
 <td>1984</td>
 <td>Pacific Comics</td>
 <td><a href="PacificComics/PacificComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fantagor</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18250,6 +18376,13 @@
 </tr>
 
 <tr>
+<td>Go Naked</td>
+<td>1993</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Go-Go</td>
 <td>1966</td>
 <td>Charlton</td>
@@ -18443,6 +18576,13 @@
 <td>1987</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Goodnight, Irene</td>
+<td>2007</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19664,6 +19804,13 @@
 </tr>
 
 <tr>
+<td>Heaven's Door</td>
+<td>2020</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heavy Liquid</td>
 <td>1999</td>
 <td>Vertigo</td>
@@ -20266,6 +20413,13 @@
 </tr>
 
 <tr>
+<td>Hot Crackers</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hot Lunch Special</td>
 <td>2018</td>
 <td>Aftershock</td>
@@ -20756,6 +20910,13 @@
 </tr>
 
 <tr>
+<td>Image Of The Beast</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Imaginary Friends</td>
 <td>2017</td>
 <td>Vertigo</td>
@@ -21047,6 +21208,13 @@
 <td>2013</td>
 <td>DC</td>
 <td><a href="Injustice/Injustice.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Inner City Romance</td>
+<td>1972</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21355,6 +21523,13 @@
 <td>2006</td>
 <td>Channel 4 UK</td>
 <td><a href="ITCrowd/ITCrowd.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Its A Dog's Life</td>
+<td>1982</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22261,6 +22436,13 @@
 </tr>
 
 <tr>
+<td>Junkwaffle</td>
+<td>1983</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jupiter's Legacy</td>
 <td>2015</td>
 <td>Image</td>
@@ -22321,6 +22503,13 @@
 <td>1990</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Justin Green's Binky Brown Sampler</td>
+<td>1995</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23325,6 +23514,13 @@
 </tr>
 
 <tr>
+<td>Laugh In The Dark</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Laugh-Out-Loud Cats Sell Out</td>
 <td>2009</td>
 <td>Abrams</td>
@@ -23731,6 +23927,13 @@
 </tr>
 
 <tr>
+<td>Little Fluffy Gigolo Pelu</td>
+<td>2009</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little Iodine</td>
 <td>1950</td>
 <td>Dell</td>
@@ -24008,6 +24211,13 @@
 <td>2000</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lonely Nights</td>
+<td>1986</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25956,6 +26166,13 @@
 </tr>
 
 <tr>
+<td>Merton Of The Movement</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Meta-4</td>
 <td>1991</td>
 <td>First Comics</td>
@@ -26831,6 +27048,13 @@
 </tr>
 
 <tr>
+<td>Motor City Comics</td>
+<td>1991</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Motor Crush</td>
 <td>2016</td>
 <td>Image</td>
@@ -26996,6 +27220,13 @@
 <td>1926</td>
 <td>Creator</td>
 <td><a href="MurphyAnderson/MurphyAnderson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Musical Legends</td>
+<td>2004</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27266,6 +27497,13 @@
 </tr>
 
 <tr>
+<td>My Troubles With Women</td>
+<td>1992</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>My True Love Thrilling Confession Stories</td>
 <td>1949</td>
 <td>Fox Comics</td>
@@ -27368,6 +27606,13 @@
 <td>1940</td>
 <td>Atlas</td>
 <td><a href="Mystic/Mystic.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mystic Funnies</td>
+<td>1999</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28208,6 +28453,13 @@
 <td>1889</td>
 <td>Publisher</td>
 <td><a href="Nintendo/Nintendo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>No Ducks!</td>
+<td>1977</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30455,6 +30707,13 @@
 </tr>
 
 <tr>
+<td>Psychotic Adventures</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Psylocke And Archangel</td>
 <td>1997</td>
 <td>Marvel</td>
@@ -30798,6 +31057,13 @@
 </tr>
 
 <tr>
+<td>Raw, Boiled and Cooked: Comics On The Verge</td>
+<td>2004</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rawhead Rex</td>
 <td>1994</td>
 <td>Eclipse</td>
@@ -30942,6 +31208,13 @@
 <td>1952</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+
+<tr>
+<td>Red Raider</td>
+<td>1977</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Red Raven</td>
@@ -32063,10 +32336,24 @@
 </tr>
 
 <tr>
+<td>Sacred And Profane</td>
+<td>1976</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sad Sack</td>
 <td>1942</td>
 <td>Harvey</td>
 <td><a href="SadSack/SadSack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>San Francisco Comic Book</td>
+<td>1981</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32436,6 +32723,13 @@
 <td>1995</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Schizophrenia</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34118,6 +34412,13 @@
 </tr>
 
 <tr>
+<td>Spasm</td>
+<td>1973</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spawn</td>
 <td>1992</td>
 <td>Image</td>
@@ -34969,6 +35270,13 @@
 <td>1954</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Tale Of Panorama Island</td>
+<td>2012</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35881,6 +36189,13 @@
 </tr>
 
 <tr>
+<td>Tejano Exile</td>
+<td>1980</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Television Puppet Show</td>
 <td>1950</td>
 <td>Avon</td>
@@ -36420,6 +36735,13 @@
 </tr>
 
 <tr>
+<td>Tokyo Zombie</td>
+<td>2008</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tom &amp; Jerry</a>
 <td>1949</td>
 <td>Dell</td>
@@ -36564,6 +36886,13 @@
 <td>1991</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tortoise And The Hare</td>
+<td>1971</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38772,6 +39101,13 @@
 </tr>
 
 <tr>
+<td>White Commanche</td>
+<td>1977</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>White Princess Of The Jungle</td>
 <td>1951</td> 
 <td>Avon</td>
@@ -39787,6 +40123,13 @@
 </tr>
 
 <tr>
+<td>Yow</td>
+<td>1978</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Yow!</td>
 <td>2010</td>
 <td>Drawn &amp; Quarterly</td>
@@ -39952,6 +40295,13 @@
 <td>1940</td>
 <td>MLJ</td>
 <td><a href="ZipComics/ZipComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zippy</td>
+<td>1980</td>
+<td>Last Gasp</td>
+<td><a href="LastGasp/LastGasp.html">Details</a></td>
 </tr>
 
 <tr>
