--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -589,7 +589,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW192.jpg">Illegitimates</a> (2013)
 <li><a href="IDW193.jpg">Imageinary Drugs</a> (2018)
 <li><a href="IDW194.jpg">Impossible Incorporated</a> (2018)
-<li><a href="IDW195.jpg">Indestructablen</a> (2013) 	
+<li><a href="IDW195.jpg">Indestructable</a> (2013) 	
 <li><a href="IDW196.jpg">Infected</a> (2012)	
 <li><a href="IDW197.jpg">Infinite Loop</a> (2015)
 <li><a href="IDW198.jpg">Insufferable</a> (2015)
@@ -714,9 +714,9 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW310.jpg">Star Trek vs Transformers</a> (2018)
 <li><a href="IDW311.jpg">Star Wars Adventures</a> (2017) 		
 <li><a href="IDW312.jpg">Steve Niles Omnibus</a> (2008)				
-<li><a href="../StrangeScienceFantasy/StrangeScienceFantasy.html">Strange Science Fantasy</a>
+<li><a href="../StrangeScienceFantasy/StrangeScienceFantasy.html">Strange Science Fantasy</a> (2010)
 <li><a href="IDW313.jpg">Street Fighter x G.I. Joe and Transformers</a> (2016) 		
-<li><a href="IDW314.jpg">The Suicide Forest</a> (2010)	
+<li><a href="IDW314.jpg">Suicide Forest</a> (2010)	
 <li><a href="IDW315.jpg">Suicide Girls</a> (2011)
 <li><a href="IDW316.jpg">Sukeban Turbo</a> (2018)
 <li><a href="IDW317.jpg">Supermarket</a> (2006) 		
