--- a/index.html
+++ b/index.html
@@ -29345,6 +29345,13 @@
 </tr>
 
 <tr>
+<td>Octobriana</td>
+<td>1971</td>
+<td>Revolution Comics</td>
+<td><a href="Octobriana/Octobriana.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Of Myths And Men</td>
 <td>1987</td>
 <td>Blackthorne</td>
