--- a/ACComics/ACComics.html
+++ b/ACComics/ACComics.html
@@ -55,6 +55,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ACComics35.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACComics36.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ACComics37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics38.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -74,7 +75,7 @@ Titles
 <li><a href="ACComics4.jpg">America's Greatest Comics</a> (2002)
 <li><a href="ACComics5.jpg">Americomics</a> (1983)
 <li><a href="ACComics6.jpg">Americomics Special</a> (1983)
-<li><a href="ACComics7.jpg">ArmageddonFactor</a> (1987)
+<li><a href="ACComics7.jpg">Armageddon Factor</a> (1987)
 <li><a href="ACComics8.jpg">Avenger</a> (1996)
 <li><a href="ACComics9.jpg">Bad Girl Backlash</a> (1995)
 <li><a href="ACComics10.jpg">Barbarians and Beauties</a> (1990)
@@ -90,6 +91,7 @@ Titles
 <li><a href="ACComics20.jpg">Faze 1 Fazers</a> (1986)
 <li><a href="../Femforce/Femforce.html">Femforce</a> (1985)
 <li><a href="ACComics21.jpg">Femzine (1981)
+<li><a href="ACComics38.jpg">Fighting Yank</a> (2001)
 <li><a href="ACComics22.jpg">Fun Comics (1981)
 <li><a href="ACComics23.jpg">Further Adventures of Nyoka the Jungle Girl</a> (1988)
 <li><a href="ACComics24.jpg">Garganta's Thrilling Science</a> (2001)
