--- a/IconComics/IconComics.html
+++ b/IconComics/IconComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Icon1.jpg">
+<img src="Icon.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,31 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Icon24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -28,28 +52,32 @@ Icon Comics is an imprint of Marvel Comics for creator-owned titles, designed to
 </p><p>
 Titles
 </p><p>
-<li>The Book of Lost Souls 
-<li>Brilliant 
-<li>Casanova (2014)
-<li>Criminal (2016)
-<li>Dream Logic
-<li>Dream Police (2014)
-<li>Empress
-<li>Hit-Girl
-<li>Incognito 
-<li>Jack Kirby's Galactic Bounty Hunters
-<li>Kabuki (2014)
-<li>Kick-Ass (2018)
-<li>Men of Wrath
-<li>Nemesis
-<li>Painkiller 
-<li>Powers 
-<li>Scarlet
-<li>The Secret Service (2017)
-<li>Supercrooks 
-<li>Superior
-<li>Takio 
-<li>The United States of Murder Inc.
+<li><a href="Icon1.jpg">Book of Lost Souls</a> (2005) 
+<li><a href="Icon2.jpg">Brilliant</a> (2011)
+<li><a href="Icon3.jpg">Casanova: Luxuria (2011)
+<li><a href="Icon4.jpg">Casanova: Avaritia</a> (2011)
+<li><a href="Icon5.jpg">Casanova: Gula</a> (2011)
+<li><a href="../Criminal/Criminal.html">Criminal</a> (2006)
+<li><a href="../CriminalTheSinners/CriminalTheSinners.html">Criminal: The Sinners</a> (2009)
+<li><a href="Icon6.jpg">Dream Logic</a> (2010)
+<li><a href="Icon7.jpg">Dream Police</a> (2005)
+<li><a href="Icon8.jpg">Empress</a> (2016)
+<li><a href="Icon9.jpg">Hit-Girl</a> (2012)
+<li><a href="Icon10.jpg">Incognito</a> (2009)
+<li><a href="Icon11.jpg">Incognito: Bad Influences</a> (2010)
+<li><a href="Icon12.jpg">Jack Kirby's Galactic Bounty Hunters</a> (2006)
+<li><a href="Icon13.jpg">Jinx: The Essential Collection</a> (2011)
+<li><a href="Icon14.jpg">Kabuki</a> (2004)
+<li><a href="Icon15.jpg">Kabuki Reflections</a> (2005)
+<li><a href="Icon16.jpg">Kick-Ass</a> (2008)
+<li><a href="Icon17.jpg">Men of Wrath</a> (2014)
+<li><a href="Icon18.jpg">Nemesis</a> (2010)
+<li><a href="Icon19.jpg">Painkiller Jane</a> (2013)
+<li><a href="Icon20.jpg">Powers</a> (2009) 
+<li><a href="Icon21.jpg">Scarlet</a> (2010)
+<li><a href="Icon22.jpg">Secret Service</a> (2017)
+<li><a href="Icon23.jpg">Takio</a> (2012) 
+<li><a href="Icon24.jpg">United States of Murder Inc.</a> (2014)
 
 </p>
 
