Sunday Press Books

--- a/index.html
+++ b/index.html
@@ -38318,6 +38318,13 @@
 </tr>
 
 <tr>
+<td>Sunday Press Books</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="SundayPressBooks/SundayPressBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sunfire And Big Hero Six</td>
 <td>1998</td>
 <td>Marvel</td>
